@@ -13,10 +13,10 @@
  * (1) http://ckeditor.com/builder
  *     Visit online builder to build CKEditor from scratch.
  *
- * (2) http://ckeditor.com/builder/d1a53ec0e7a43d8268c53e7b86666b0e
+ * (2) http://ckeditor.com/builder/d97b6d42ea158d15ebe90da9451162c5
  *     Visit online builder to build CKEditor, starting with the same setup as before.
  *
- * (3) http://ckeditor.com/builder/download/d1a53ec0e7a43d8268c53e7b86666b0e
+ * (3) http://ckeditor.com/builder/download/d97b6d42ea158d15ebe90da9451162c5
  *     Straight download link to the latest version of CKEditor (Optimized) with the same setup as before.
  *
  * NOTE:
@@ -77,6 +77,7 @@ var CKBUILDER_CONFIG = {
 		'listblock' : 1,
 		'menu' : 1,
 		'menubutton' : 1,
+		'onchange' : 1,
 		'panel' : 1,
 		'panelbutton' : 1,
 		'pastefromword' : 1,
